# testLinuxTask

./: CMakeLists.txt  main.cpp  readme.md  setupDB.sql  test.db
src/code/: Groups.cpp  dbSql.cpp  objectList.cpp
src/headers/: Groups.h  dbSql.h  objectList.h  structs.h
